# hsr-endgame-sheet-updater

./: .gitignore  README.md  automate.py  client.py  constants.py  dump_endgames.py  enums.py  main.py  nanoka.py  notifier.py  noxfile.py  pyproject.toml  sheets.py  utils.py  version.json  weekly_usage.py
.github/workflows/: update-sheet.yml  weekly-usage.yml
data/: usage_by_endgame.csv  usage_overall.csv
lib/: __init__.py  client.py  constants.py  enums.py  env.py  logger.py  nanoka.py  notifier.py  sheets.py  version.py
lib/models/: __init__.py  aa.py  apoc.py  enums.py  moc.py  pf.py
models/: __init__.py  aa.py  apoc.py  enums.py  model.py  pf.py
