[project]
name = "hsr-things"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "genshin>=1.7.27",
    "google-auth>=2.53.0",
    "gspread>=6.2.1",
    "httpx>=0.28.1",
    "nox>=2026.4.10",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
]

[tool.uv.sources]
genshin = { git = "https://github.com/seriaati/genshin.py", rev = "39e58f3" }
